# narrate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/narrate/: __init__.py  core.py  player.py
src/narrate/engines/: __init__.py  base.py  chatterbox_engine.py  kokoro_engine.py
